@@ -14,26 +14,30 @@
 package org.eclipse.jetty.ee9.security;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
+import java.util.function.Function;
 
 import jakarta.servlet.ServletException;
-import jakarta.servlet.ServletRequest;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.eclipse.jetty.ee9.nested.AbstractHandler;
 import org.eclipse.jetty.ee9.nested.ContextHandler;
 import org.eclipse.jetty.ee9.nested.Request;
+import org.eclipse.jetty.ee9.nested.ServletConstraint;
 import org.eclipse.jetty.ee9.nested.SessionHandler;
-import org.eclipse.jetty.ee9.nested.UserIdentity;
 import org.eclipse.jetty.ee9.security.authentication.BasicAuthenticator;
 import org.eclipse.jetty.http.HttpMethod;
 import org.eclipse.jetty.http.HttpScheme;
 import org.eclipse.jetty.http.HttpURI;
+import org.eclipse.jetty.security.DefaultIdentityService;
+import org.eclipse.jetty.security.IdentityService;
+import org.eclipse.jetty.security.LoginService;
+import org.eclipse.jetty.security.UserIdentity;
 import org.eclipse.jetty.server.Connector;
 import org.eclipse.jetty.server.HttpConnectionFactory;
 import org.eclipse.jetty.server.LocalConnector;
 import org.eclipse.jetty.server.Server;
-import org.eclipse.jetty.util.security.Constraint;
+import org.eclipse.jetty.server.Session;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -46,7 +50,6 @@ public class DataConstraintsTest
     private Server _server;
     private LocalConnector _connector;
     private LocalConnector _connectorS;
-    private SessionHandler _session;
     private ConstraintSecurityHandler _security;
 
     @BeforeEach
@@ -84,14 +87,14 @@ public class DataConstraintsTest
         _server.setConnectors(new Connector[]{_connector, _connectorS});
 
         ContextHandler contextHandler = new ContextHandler();
-        _session = new SessionHandler();
+        SessionHandler session = new SessionHandler();
 
         contextHandler.setContextPath("/ctx");
         _server.setHandler(contextHandler);
-        contextHandler.setHandler(_session);
+        contextHandler.setHandler(session);
 
         _security = new ConstraintSecurityHandler();
-        _session.setHandler(_security);
+        session.setHandler(_security);
 
         _security.setHandler(new AbstractHandler()
         {
@@ -117,18 +120,15 @@ public class DataConstraintsTest
     @Test
     public void testIntegral() throws Exception
     {
-        Constraint constraint0 = new Constraint();
+        ServletConstraint constraint0 = new ServletConstraint();
         constraint0.setAuthenticate(false);
         constraint0.setName("integral");
-        constraint0.setDataConstraint(Constraint.DC_INTEGRAL);
+        constraint0.setDataConstraint(ServletConstraint.DC_INTEGRAL);
         ConstraintMapping mapping0 = new ConstraintMapping();
         mapping0.setPathSpec("/integral/*");
         mapping0.setConstraint(constraint0);
 
-        _security.setConstraintMappings(Arrays.asList(new ConstraintMapping[]
-            {
-                mapping0
-            }));
+        _security.setConstraintMappings(List.of(mapping0));
 
         _server.start();
 
@@ -148,18 +148,15 @@ public class DataConstraintsTest
     @Test
     public void testConfidential() throws Exception
     {
-        Constraint constraint0 = new Constraint();
+        ServletConstraint constraint0 = new ServletConstraint();
         constraint0.setAuthenticate(false);
         constraint0.setName("confid");
-        constraint0.setDataConstraint(Constraint.DC_CONFIDENTIAL);
+        constraint0.setDataConstraint(ServletConstraint.DC_CONFIDENTIAL);
         ConstraintMapping mapping0 = new ConstraintMapping();
         mapping0.setPathSpec("/confid/*");
         mapping0.setConstraint(constraint0);
 
-        _security.setConstraintMappings(Arrays.asList(new ConstraintMapping[]
-            {
-                mapping0
-            }));
+        _security.setConstraintMappings(List.of(mapping0));
 
         _server.start();
 
@@ -179,17 +176,14 @@ public class DataConstraintsTest
     @Test
     public void testConfidentialWithNoRolesSetAndNoMethodRestriction() throws Exception
     {
-        Constraint constraint0 = new Constraint();
+        ServletConstraint constraint0 = new ServletConstraint();
         constraint0.setName("confid");
-        constraint0.setDataConstraint(Constraint.DC_CONFIDENTIAL);
+        constraint0.setDataConstraint(ServletConstraint.DC_CONFIDENTIAL);
         ConstraintMapping mapping0 = new ConstraintMapping();
         mapping0.setPathSpec("/confid/*");
         mapping0.setConstraint(constraint0);
 
-        _security.setConstraintMappings(Arrays.asList(new ConstraintMapping[]
-            {
-                mapping0
-            }));
+        _security.setConstraintMappings(List.of(mapping0));
 
         _server.start();
 
@@ -205,18 +199,15 @@ public class DataConstraintsTest
     @Test
     public void testConfidentialWithNoRolesSetAndMethodRestriction() throws Exception
     {
-        Constraint constraint0 = new Constraint();
+        ServletConstraint constraint0 = new ServletConstraint();
         constraint0.setName("confid");
-        constraint0.setDataConstraint(Constraint.DC_CONFIDENTIAL);
+        constraint0.setDataConstraint(ServletConstraint.DC_CONFIDENTIAL);
         ConstraintMapping mapping0 = new ConstraintMapping();
         mapping0.setPathSpec("/confid/*");
         mapping0.setMethod(HttpMethod.POST.asString());
         mapping0.setConstraint(constraint0);
 
-        _security.setConstraintMappings(Arrays.asList(new ConstraintMapping[]
-            {
-                mapping0
-            }));
+        _security.setConstraintMappings(List.of(mapping0));
 
         _server.start();
 
@@ -238,19 +229,16 @@ public class DataConstraintsTest
     @Test
     public void testConfidentialWithRolesSetAndMethodRestriction() throws Exception
     {
-        Constraint constraint0 = new Constraint();
+        ServletConstraint constraint0 = new ServletConstraint();
         constraint0.setRoles(new String[]{"admin"});
         constraint0.setName("confid");
-        constraint0.setDataConstraint(Constraint.DC_CONFIDENTIAL);
+        constraint0.setDataConstraint(ServletConstraint.DC_CONFIDENTIAL);
         ConstraintMapping mapping0 = new ConstraintMapping();
         mapping0.setPathSpec("/confid/*");
         mapping0.setMethod(HttpMethod.POST.asString());
         mapping0.setConstraint(constraint0);
 
-        _security.setConstraintMappings(Arrays.asList(new ConstraintMapping[]
-            {
-                mapping0
-            }));
+        _security.setConstraintMappings(List.of(mapping0));
 
         _server.start();
 
@@ -272,20 +260,17 @@ public class DataConstraintsTest
     @Test
     public void testConfidentialWithRolesSetAndMethodRestrictionAndAuthenticationRequired() throws Exception
     {
-        Constraint constraint0 = new Constraint();
+        ServletConstraint constraint0 = new ServletConstraint();
         constraint0.setRoles(new String[]{"admin"});
         constraint0.setAuthenticate(true);
         constraint0.setName("confid");
-        constraint0.setDataConstraint(Constraint.DC_CONFIDENTIAL);
+        constraint0.setDataConstraint(ServletConstraint.DC_CONFIDENTIAL);
         ConstraintMapping mapping0 = new ConstraintMapping();
         mapping0.setPathSpec("/confid/*");
         mapping0.setMethod(HttpMethod.POST.asString());
         mapping0.setConstraint(constraint0);
 
-        _security.setConstraintMappings(Arrays.asList(new ConstraintMapping[]
-            {
-                mapping0
-            }));
+        _security.setConstraintMappings(List.of(mapping0));
         DefaultIdentityService identityService = new DefaultIdentityService();
         _security.setLoginService(new CustomLoginService(identityService));
         _security.setIdentityService(identityService);
@@ -319,7 +304,7 @@ public class DataConstraintsTest
     @Test
     public void testRestrictedWithoutAuthenticator() throws Exception
     {
-        Constraint constraint0 = new Constraint();
+        ServletConstraint constraint0 = new ServletConstraint();
         constraint0.setAuthenticate(true);
         constraint0.setRoles(new String[]{"admin"});
         constraint0.setName("restricted");
@@ -327,10 +312,7 @@ public class DataConstraintsTest
         mapping0.setPathSpec("/restricted/*");
         mapping0.setConstraint(constraint0);
 
-        _security.setConstraintMappings(Arrays.asList(new ConstraintMapping[]
-            {
-                mapping0
-            }));
+        _security.setConstraintMappings(List.of(mapping0));
         _server.start();
 
         String response;
@@ -351,7 +333,7 @@ public class DataConstraintsTest
     @Test
     public void testRestrictedWithoutAuthenticatorAndMethod() throws Exception
     {
-        Constraint constraint0 = new Constraint();
+        ServletConstraint constraint0 = new ServletConstraint();
         constraint0.setAuthenticate(true);
         constraint0.setRoles(new String[]{"admin"});
         constraint0.setName("restricted");
@@ -360,10 +342,7 @@ public class DataConstraintsTest
         mapping0.setMethod("GET");
         mapping0.setConstraint(constraint0);
 
-        _security.setConstraintMappings(Arrays.asList(new ConstraintMapping[]
-            {
-                mapping0
-            }));
+        _security.setConstraintMappings(List.of(mapping0));
         _server.start();
 
         String response;
@@ -384,7 +363,7 @@ public class DataConstraintsTest
     @Test
     public void testRestricted() throws Exception
     {
-        Constraint constraint0 = new Constraint();
+        ServletConstraint constraint0 = new ServletConstraint();
         constraint0.setAuthenticate(true);
         constraint0.setRoles(new String[]{"admin"});
         constraint0.setName("restricted");
@@ -393,10 +372,7 @@ public class DataConstraintsTest
         mapping0.setMethod("GET");
         mapping0.setConstraint(constraint0);
 
-        _security.setConstraintMappings(Arrays.asList(new ConstraintMapping[]
-            {
-                mapping0
-            }));
+        _security.setConstraintMappings(List.of(mapping0));
         DefaultIdentityService identityService = new DefaultIdentityService();
         _security.setLoginService(new CustomLoginService(identityService));
         _security.setIdentityService(identityService);
@@ -418,13 +394,13 @@ public class DataConstraintsTest
         assertThat(response, Matchers.containsString("HTTP/1.1 404 Not Found"));
     }
 
-    private class CustomLoginService implements LoginService
+    private static class CustomLoginService implements LoginService
     {
-        private IdentityService identityService;
+        private final IdentityService _identityService;
 
         public CustomLoginService(IdentityService identityService)
         {
-            this.identityService = identityService;
+            this._identityService = identityService;
         }
 
         @Override
@@ -434,10 +410,10 @@ public class DataConstraintsTest
         }
 
         @Override
-        public UserIdentity login(String username, Object credentials, ServletRequest request)
+        public UserIdentity login(String username, Object credentials, org.eclipse.jetty.server.Request request, Function<Boolean, Session> getOrCreateSession)
         {
             if ("admin".equals(username) && "password".equals(credentials))
-                return new DefaultUserIdentity(null, null, new String[]{"admin"});
+                return UserIdentity.from(null, null, "admin");
             return null;
         }
 
@@ -450,7 +426,7 @@ public class DataConstraintsTest
         @Override
         public IdentityService getIdentityService()
         {
-            return identityService;
+            return _identityService;
         }
 
         @Override
